--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "answers-on-questions",
   "private": true,
   "dependencies": {
+    "@nathanvda/cocoon": "^1.2.14",
+    "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
