--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "gist-client": "^1.1.1",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.3",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
